--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iguanas</title>
     <script src="https://kit.fontawesome.com/12fdece041.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="giAssets/css/estilo.css">
+    <link rel="stylesheet" href="assets/css/estilo.css">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
             alimentación de la iguana va variando según su etapa de vida, pero la mayor parte de sus años son
             herbívoras. Viven en lugares tropicales con mucha vegetación y es un animal que puede ser domesticado.
         </p>
-        <img src="Assets/img/iguana-1.jpg" alt="Imagen de Iguana principal">
+        <img src="assets/img/iguana-1.jpg" alt="Imagen de Iguana principal">
     </main>
 
     <section class="caracteristicas">
